--- a/compose.yaml
+++ b/compose.yaml
@@ -2,8 +2,13 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=consultas_medicas'
+      - 'POSTGRES_PASSWORD=goldenBoy'
+      - 'POSTGRES_USER=postgres'
     ports:
-      - '5432'
+      - '5432:5432'
+    volumes:
+      - postgres-data:/var/lib/postgresql/data  # Persistência dos dados
+
+volumes:
+  postgres-data:
