--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,14 +24,11 @@ spring.security.user.name=admin123
 spring.security.user.password=y9X!vN2z&L4k@W8d
 
 
-
-
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-
-
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Porta do servidor Spring Boot
 server.port=8080
+spring.jackson.time-zone=America/Sao_Paulo  
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
