--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,14 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=consultasmedicasprojeto@gmail.com
-spring.mail.password=y9X!vN2z&L4k@W8d
+spring.mail.password=swqy kkne lstd sbca
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
 
 spring.security.user.name=admin123
 spring.security.user.password=y9X!vN2z&L4k@W8d
